feat: added market insights for users
